refactor: change String IDs to UUIDs v7 in request and response models; support for postgres 18+; and optimizations; add Insomnia.yaml